fix: footer spacing

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -217,3 +217,7 @@ li.usa-nav__primary-item a:hover::after{
     margin-top: .2ex !important;
   }
 }
+
+.summary-box{
+  margin-bottom: 300px;
+}
